🐛 Fix notifications being visible w/ needed login

--- a/src/octoprint/static/less/octoprint.less
+++ b/src/octoprint/static/less/octoprint.less
@@ -1543,7 +1543,6 @@ input[type="number"].input-nospin {
 // page wide login form
 #page-container-needlogin {
   background-color: #ffffff;
-  z-index: 12300;
   .form-signin {
     max-width: 300px;
     padding: 19px 29px 29px;
